A Go tree, and the tools on standard input and standard output
ST4 had a Java tree and a C# port and no Go one, while DTX carried a copy
of the port to pack DTX2 columns with. The copy comes home: go/st4 is where
it is kept, and the trees that pack with it carry a copy of this.

THE PENALTY. Neither the Go copy nor the C# port had -pN: DTX never asked
for it, so it was never ported, and a tool that reads the flag and parses
without it is worse than one that refuses the flag. Both trees have it now,
at the same six cost sites as the Java parser, and the three write one byte
stream for one input at every flag tried.

STANDARD INPUT AND STANDARD OUTPUT. A tool reads standard input, writes
standard output and reports on standard error, as the rest of the family
does, so one pipes into the next and -silent leaves the report off. -f and
the two file arguments go with the change. Every progress line moved to
standard error as well, in all three trees: the meter wrote to standard
output, where the packed bytes now go, and would have corrupted them.

THE WRAPPERS. bin/st4 and bin/dst4 run the Java tools out of target/classes
and build first where a source is newer, as DTX's and YMXS's do.

THE RELEASE. release/publish.sh builds both tools for six platforms out of
go/, one zip each, and tries the host's pair from outside the repository
with an empty environment. The module is github.com/odipar/st4/go, tagged
go/vX.Y.Z; its version is the tools', not the format's, since a Go module
is versioned from v0 and the format is 7.

GoParityTest reads the two trees against each other over three inputs at
ten flag settings, and unpacks what each packs. A single bit added to one
cost in the Go parser fails it, which is how the reading was checked.

HouseStyleTest reads .go now, and found 42 constructs in the carried copy,
which had never been swept: the same words the Java tree took.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>